# jackie

./: .buildinfo  .editorconfig  .gitignore  404.html  CHANGELOG.md  README.md  index.html  manage-docs  mkdocs.yml  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: ci.yaml  ci.yml  docs.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/changelog/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2/changelog/: index.html
0.2/search/: search_index.json
dev/: 404.html  index.html  sitemap.xml
dev/changelog/: index.html
dev/search/: search_index.json
docs/: index.md
docs/overrides/: index.html
docs/quick-start/: deployment.md  hello-world.md  installation.md
docs/reference/: client.md  http.md  multidict.md  multipart.md  router.md
examples/: cookies.py  file_upload.py  hello_world.py
jack/: multidict.py
jack/http/: __init__.py  exceptions.py  request.py  response.py  stream.py  wrappers.py
jack/router/: matcher.py  router.py
jackie/: bridge.py  client.py  header.py  multipart.py  parse.py  serialize.py
jackie/http/: __init__.py  exceptions.py  request.py  response.py  socket.py  stream.py  wrappers.py
jackie/router/: matcher.py  router.py
latest/: 404.html  index.html  sitemap.xml
latest/changelog/: index.html
latest/overrides/: index.html
overrides/partials/: header.html  nav.html
tests/: test_client.py  test_header.py  test_multidict.py  test_multipart.py  test_parse.py  test_serialize.py  test_socket.py
tests/http/: test_request.py  test_response.py  test_router.py  test_stream.py  test_wrappers.py
(+41 files in other folders)
